--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 *{box-sizing: border-box;}
 body{
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
     background: linear-gradient(90deg, var(--bg-color), var(--panel));
     place-items: start center;
@@ -123,7 +123,7 @@ button:active{
     border: 2px solid rgba(0, 0, 0, .25);
     border-radius: 8px;
     padding: 8px;
-    flex: 1 1 400px;
+    flex: 1 1 40%;
 }
 .card .link{
     border-radius: 8px;
